<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/otpbg"
    tools:context=".OTPScreen">

    <ImageView
        android:id="@+id/deekshalogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/dlogo"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/thunt"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="0dp"
        app:srcCompat="@drawable/thunt" />

    <ImageView
        android:id="@+id/nsslogo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:alpha="0"
        app:srcCompat="@drawable/nsslogo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:fontFamily="sans-serif-black"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_mobile"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="sans-serif-black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/enter_your_otp_code_here"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="#55EAEBEA"
        app:cursorColor="@color/black"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="50dp"
        app:itemRadius="5dp"
        app:itemWidth="50dp"
        app:lineColor="@color/black"
        app:lineWidth="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/didn_t_receive_an_otp"
        android:textColor="@color/colorGray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/resendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:text="@string/resend_otp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/verifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobileNumberText"
        android:layout_centerHorizontal="true"
        android:layout_gravity="start"
        android:layout_marginStart="160dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/verify"
        app:backgroundTint="@color/purple_500" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />


</LinearLayout>